# rohanta-rag-chatbot

./: .env.example  .gitignore  Dockerfile  NOTES.txt  README.md  my_data.txt  pyproject.toml  requirements.txt  start.sh
.streamlit/: config.toml
eval/: run_evals.py  test_questions.json
scripts/: ingest.py
src/api/: main.py
src/config/: settings.py
src/core/: __init__.py  chain.py  prompts.py  retriever.py
src/services/: __init__.py  embedding_service.py  llm_service.py  vector_store_service.py
src/ui/: app.py
src/utils/: __init__.py  exceptions.py  logger.py
tests/: conftest.py  test_api.py  test_chain.py  test_config.py  test_ingestion.py
